@@ -8,6 +8,7 @@ prerm_template: /usr/share/gcs/templates/prerm.template
 postrm_template: /usr/share/gcs/templates/postrm.template
 config_template: /usr/share/gcs/templates/config.template
 copyright_template: /usr/share/gcs/templates/copyright.template
+sourceformat_template: /usr/share/gcs/templates/sourceformat.template
 
 ## Final extension for the configuration files.
 config_extension: .gcs
